add draft ui for show recent win balls data

--- a/qml.qrc
+++ b/qml.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>HistoryWinNumberView.qml</file>
+        <file>RecentWinNumberView.qml</file>
     </qresource>
 </RCC>
